[package]
name = "jsonwebtokens-cognito"
version = "0.1.0-alpha.5"
authors = ["Robert Bragg <robert@sixbynine.org>"]
edition = "2018"
repository = "https://github.com/rib/jsonwebtokens-cognito"
documentation = "https://docs.rs/jsonwebtokens-cognito/"
readme = "README.md"
license = "MIT"
keywords = ["jwt", "jwk", "jwks", "token", "cognito"]
categories = ["authentication"]
description = "Decodes and verifies Json Web Tokens issued by AWS Cognito"

[dependencies]
jsonwebtokens = "1.0.0-alpha"
reqwest = { git = "https://github.com/seanmonstar/reqwest", version = "=0.10.0-alpha.2", features=["json"] }
serde = { version="1", features=["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "0", features = [ "full" ] } # avoid conflict with reqwest for now
tokio-test = "0.2"